Upgrading Spring Cloud Gateway abd Pac4J